--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,15 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.hibernate.ddl-auto=update
 allowed.origins=http://localhost:4200
 
+
+# File Config
+spring.servlet.multipart.max-file-size=1GB
+spring.servlet.multipart.max-request-size=1GB
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=amine.abkadri@etu.uae.ac.ma
+spring.mail.password=fwlx cmqe mnmv ksaw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
